style: fix extra margin

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,6 +8,10 @@
         font-family: 'Montserrat', sans-serif;
     }
 
+    body{
+          overflow-x: hidden;
+    }
+
     .Header-container {
         background-color: #C4C4C4;
         display: flex;
